--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -3,8 +3,8 @@ services:
   node:
     image: 'node:10-alpine'
     volumes:
-      -'./:home/node/app'
+      - './:/home/node/app'
     working_dir: '/home/node/app'
-    port:
-      -'3000:3000'
+    ports:
+      - '4000-4000'
     command: 'npm install && npm start'
